cmake_minimum_required (VERSION 3.6)

include(ExternalProject)

set(OPENSSL_VERSION "1.1.1c")
set(SRT_VERSION "1.3.3")


# OpenSSL - needs few executable such as perl and mv in PATH
ExternalProject_Add(openssl_project
		URL https://www.openssl.org/source/openssl-${OPENSSL_VERSION}.tar.gz
		CONFIGURE_COMMAND PATH=${CMAKE_C_COMPILER_EXTERNAL_TOOLCHAIN}/bin:$ENV{PATH} CC=${CMAKE_C_COMPILER} ANDROID_NDK_HOME=${ANDROID_NDK} ./Configure android-${ANDROID_ARCH_NAME} -D__ANDROID_API__=${ANDROID_NATIVE_API_LEVEL} --openssldir=${CMAKE_LIBRARY_OUTPUT_DIRECTORY} --libdir="" --prefix=${CMAKE_LIBRARY_OUTPUT_DIRECTORY}
		BUILD_BYPRODUCTS ${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/libssl.so ${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/libcrypto.so
		BUILD_COMMAND PATH=${CMAKE_C_COMPILER_EXTERNAL_TOOLCHAIN}/bin:$ENV{PATH} ANDROID_NDK_HOME=${ANDROID_NDK} make #FIXME use ninja instead
		BUILD_IN_SOURCE 1
		)

add_library(ssl SHARED IMPORTED)
add_dependencies(ssl openssl_project)
set_target_properties(ssl PROPERTIES IMPORTED_LOCATION ${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/libssl.so)

add_library(crypto SHARED IMPORTED)
add_dependencies(crypto openssl_project)
set_target_properties(crypto PROPERTIES IMPORTED_LOCATION ${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/libcrypto.so)


# SRT
ExternalProject_Add(srt_project
		GIT_REPOSITORY https://github.com/Haivision/srt.git
		GIT_TAG v${SRT_VERSION}
		PATCH_COMMAND patch -p0 -i ${CMAKE_SOURCE_DIR}/patches/0001_srt_cmakefiles.patch
		CMAKE_ARGS -DUSE_OPENSSL_PC=OFF
				-DOPENSSL_INCLUDE_DIR=${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/include
				-DOPENSSL_CRYPTO_LIBRARY=${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/libcrypto.a
				-DOPENSSL_SSL_LIBRARY=${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/libssl.a
				-DCMAKE_TOOLCHAIN_FILE=${CMAKE_TOOLCHAIN_FILE}
				-DCMAKE_PREFIX_PATH=${CMAKE_LIBRARY_OUTPUT_DIRECTORY}
				-DCMAKE_INSTALL_PREFIX=${CMAKE_LIBRARY_OUTPUT_DIRECTORY}
                -DCMAKE_INSTALL_LIBDIR=.
                -DCMAKE_INSTALL_INCLUDEDIR=include
                -DCMAKE_INSTALL_BINDIR=bin
				-DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE}
				-DANDROID_TOOLCHAIN=${ANDROID_TOOLCHAIN}
				-DANDROID_ABI=${ANDROID_ABI}
				-DANDROID_PLATFORM=${ANDROID_PLATFORM}
				-DANDROID_STL=${ANDROID_STL}
				-DANDROID_PIE=${ANDROID_PIE}
				-DANDROID_CPP_FEATURES=${ANDROID_CPP_FEATURES}
				-DANDROID_ALLOW_UNDEFINED_SYMBOLS=${ANDROID_ALLOW_UNDEFINED_SYMBOLS}
				-DANDROID_ARM_MODE=${ANDROID_ARM_MODE}
				-DANDROID_ARM_NEON=${ANDROID_ARM_NEON}
				-DANDROID_DISABLE_FORMAT_STRING_CHECKS=${ANDROID_DISABLE_FORMAT_STRING_CHECKS}
				-DANDROID_CCACHE=${ANDROID_CCACHE}
		BUILD_BYPRODUCTS ${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/libsrt.so
		DEPENDS crypto ssl
		BUILD_IN_SOURCE 1
		)

add_library(srt SHARED IMPORTED)
add_dependencies(srt srt_project)
set_target_properties(srt PROPERTIES IMPORTED_LOCATION ${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/libsrt.so)

# Target library
add_library(jnisrt SHARED SRTJNIGlue.cpp)
include_directories(${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/include)
target_link_libraries(jnisrt log android srt)
